# rust_todomvc

./: README.md  package.json
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: main.rs
backend/src/_tests/: model_db.rs  model_todo.rs
backend/src/model/: db.rs  mod.rs  todo.rs
backend/src/security/: mod.rs
backend/src/web/: mod.rs
frontend/: .gitignore  package.json
frontend/web-folder/: index.html
