[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}
futures = "0.3.29"
thiserror = "1.0.50"

#JSON Libs
serde = "1.0.192"
serde_json = "1.0.108"
serde_derive = "1.0.192"

#Web libs
warp = "0.3.6"

#DB Libs
sqlx = {version = "0.7.2", features = ["runtime-tokio-rustls", "postgres"]}
sqlb = "0.4.0"